<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/popWindow">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleInstruction"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    <ImageView
        android:id="@+id/logoHelping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/logohelp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructionOne"
        android:gravity="left"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructionTwo"
        android:textColor="@android:color/white"
        android:gravity="left"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructionThree"
        android:textColor="@android:color/white"
        android:gravity="left"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructionFour"
        android:textColor="@android:color/white"
        android:gravity="left"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

</LinearLayout>
